fix bug responsive on safari

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -55,7 +55,7 @@ margin: 0 auto;
 .banner{
   display: flex;
   flex-direction: column;
-
+align-items: flex-start;
   &Cover{
 // width:288px;
 // height: 232px;
